docs/examples/invalid/semanticErr/extension/enum/InvalidEnumAssignment.wacc
begin
  enum foo {
    A;
    B;
    C;
    D;
  };

  foo x = foo->A;
end
